--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,20 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "@hookform/resolvers": "^3.3.0",
     "@tanstack/react-query": "^4.35.0",
     "axios": "^1.5.0",
-    "react-hook-form": "^7.45.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "date-fns": "^2.30.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.279.0"
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.279.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.15.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -31,16 +34,16 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/coverage-v8": "^0.34.0",
+    "@vitest/ui": "^0.34.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.0",
-    "@vitest/ui": "^0.34.0",
-    "@vitest/coverage-v8": "^0.34.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "vitest": "^0.34.0"
   }
 }
