Clean up: Remove memory_maps app and migrate to separate repository
- Removed memory_maps app directory
- Removed memory_maps from INSTALLED_APPS
- Removed memory_maps URL routes
- Removed GIS/PostGIS dependencies from requirements.txt
- Removed AWS S3 storage dependencies (not needed for world-build)
- Cleaned up .env.example (removed PostGIS and memory_maps config)
- Simplified development.py settings (removed PostGIS conditional logic)
- Split settings into base, development, and production modules
- Memory Maps project now lives at: https://github.com/Roylaffman/memory-maps

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Django Settings
 DEBUG=True
+DJANGO_ENV=development
 SECRET_KEY=your-secret-key-here-change-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
-# Database Configuration
+# Database Configuration (Development)
 DATABASE_URL=postgresql://worldbuilding_user:password@db:5432/worldbuilding
 POSTGRES_DB=worldbuilding
 POSTGRES_USER=worldbuilding_user
